# EchoSense

./: .gitignore  GEMINI.md  MORE_PLANS.md  PLAN.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  LMSFilter.h  Limiter.h  SceneClassifier.h  SpectralProcessor.h  native-lib.cpp
app/src/main/res/layout/: activity_hearing_test.xml  activity_main.xml  activity_notes_history.xml  item_conversation_note.xml  layout_floating_button.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml  wear.xml
app/src/main/res/xml/: accessibility_service_config.xml
app/src/test/cpp/: LimiterTest.cpp  native_tests.cpp  native_tests_windows.cpp
conductor/: advanced-filtering.md  advanced-voice-clarity.md  ai-transcription-setup.md  audio-routing-multi-mic.md  audio-stability-fix.md  biquad-eq-implementation.md  foreground-and-transcription-reliability.md  gain-recovery-and-limiter.md  high-gain-boost.md  intelligent-scene-awareness-refinement.md  jetpack-compose-migration.md  on-device-summarization.md  passthrough-and-meter.md  polish-and-dsp-refinement.md  project-setup.md  raw-audio-optimization.md  stability-and-resource-sharing.md  testing-suite-scaffold.md  ui-eq-controls.md  visualization-and-auto-tune.md  wearos-and-bluetooth-optimization.md  wearos-audio-streaming.md  webrtc-vad-integration.md
wear/: build.gradle.kts
wear/src/main/: AndroidManifest.xml
wear/src/main/res/layout/: activity_filters.xml  (+1 more)
(+43 files in other folders)
